# atomics

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: on-release.yml
docs/: README.md  conf.py  index.rst
docs/api_documentation/: public_api.rst
docs/developer_documentation/: architecture.rst  building.rst  contributing.rst  design_decisions.rst  internal_apis.rst
docs/getting_started/: basic_usage.rst  installation.rst  memory_order.rst
docs/notes/: api_compatability.rst  changelog.rst  faq.rst  perf.rst
docs/reference_documentation/: alignment.rst  construction.rst  exceptions.rst  lifetime.rst  memory_order.rst  operations.rst  properties.rst  special_methods.rst  types.rst
src/: atomics.pyx
src/_impl/patomic/types/: __init__.pxd
src/atomics/: __init__.py  base.py  ctx.py  exc.py  view.py
src/atomics/_atomics/: atomics.pyx  enums.pxd  enums.pxi  enums.pyx  exceptions.pxi  version_check.pxd
src/atomics/_atomics/patomic/types/: align.pxd  ids.pxd  ops.pxd  options.pxd
src/atomics/_clib/: README.txt
src/atomics/_impl/: alignment.py  core.py  decorators.py  enums.py  exceptions.py  patomic.py  pybuffer.py  ucore.py
src/atomics/_impl/atomic/: base.py  baseint.py  bytes.py  core.py  funcs.py  int.py  view.py
src/atomics/_impl/atomic/mixins/: byteops.py  cmpxchg.py  intops.py  operations.py  properties.py  supported.py  types.py
src/patomic/: patomic.pxd  version.pxd
src/patomic/types/: __init__.py  align.pxd  feature_check.pxd  ids.pxd  memory_order.pxd  ops.pxd  options.pxd  transaction.pxd
