[build-system]
requires = [
    "GitPython",
    "cmake>=3.14",
    "setuptools>=43.0.0",
    "wheel>=0.25",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# universal2 not supported until cp38+
# build = ["cp36-*", "cp38-macosx_universal2"]
# skip = ["pp*", "cp36-macosx_universal2"]
