[metadata]
name = atomics
version = 1.0.1
description = Atomic lock-free primitives
long_description = file: README.md
long_description_content_type = text/markdown
keywords = atomic, atomics, lock-free, lock free
url = https://github.com/doodspav/atomics
author = doodspav
author_email = doodspav@gmail.com
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: System :: Hardware :: Symmetric Multi-processing
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
download_url = https://github.com/doodspav/atomics
project_urls =
    Source=https://github.com/doodspav/atomics
    patomic=https://github.com/doodspav/patomic

[options]
python_requires = >=3.6, <4
install_requires = cffi>=1.10
setup_requires =
    GitPython
    cmake>=3.14
    setuptools>=43.0.0
    wheel>=0.25
